--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,34 @@
   align-items    : center;
 }
 
-#game-container {
+.container {
+  display: flex;
+}
+
+#game-scene {
   z-index: 10;
 }
 
-#game-container>canvas {
+#game-scene>canvas {
   border-radius: 5px;
+}
+
+.name-box {
+  margin-left: 20px;
+  width: 200px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  padding: 5px 10px;
+  overflow-y: auto;
+  border: 1px solid blue;
+}
+
+.name-box p {
+  margin-bottom: 5px;
+  font-size  : 12px;
+  color      : blue;
+  font-weight: 600;
 }
 
 .mask {
